--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
     default: '2023-06-01'
 runs:
   using: 'node20'
-  main: 'dist/index.js'
+  main: 'index.js'
 branding:
   icon: 'code'
   color: 'purple'
