--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Ollama Code Review
-        uses: alsutton/ollama-code-reviewer-action
+        uses: alsutton/ollama-code-reviewer-action@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           url: "http://127.0.0.1:11434/"
