--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -17,4 +17,4 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           url: "http://127.0.0.1:11434/"
-          model: "mistral-nemo:12b"
+          model: "gpt-oss:latest"
