--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   review:
-    runs-on: ai-reviewer
+    runs-on: ["self-hosted", "ai-reviewer"]
     steps:
       - uses: actions/checkout@v3
       - name: Ollama Code Review
